--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 torch = "^2.3.1"
 torchvision = "^0.18.1"
 matplotlib = "^3.9.0"
+zmq = "^0.0.0"
+httpx = "^0.27.0"
 
 
 [build-system]
